Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18737

QGraphicsView with vertical scrolbar flickers somewhat when splitview opens

XMLWordPrintable

    • f4dedf1a4d7e530c715f99327da175cec67d66e4

      When opening an application that has:

      • maximized window state
      • contains proxy widget
      • is showing vertical scrollbar,

      application flickers rather badly when opening a splitview keyboard.

      This caused by several operations happening almost simultaneously.
      1. Windowstate is changed to fullscreen
      2. graphicsview is translated upwards
      3. focusitem is ensured to be visible in the center of the available screen

      All of these should happen inside updatesEnabled(false) - updatesEnabled(true) guards.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samimeri Sami Merila (Inactive)
            samimeri Sami Merila (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes