QGraphicsView with vertical scrollbar flickers when splitview opens

Do windowstate change to fullscreen inside updateEnabled(false) -
updateEnabled(true) guard block to avoid flickering of screen
area, when keyboard opens in splitview.

In worst case, screen is drawn three times:
        - resize the content area to fit into splitview
        - change windowstate to fullscreen
        - ensure visibility of the focusitem by scrolling the view

Now, all these happen inside one "update".

Task-number: QTBUG-18737
Reviewed-by: Guoqing Zhang